--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.example.biddingapp.LoginFragment"
+        android:name="com.example.biddingapp.fragment.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
@@ -16,13 +16,10 @@
         <action
             android:id="@+id/action_loginFragment_to_tradingFragment"
             app:destination="@id/tradingFragment" />
-        <action
-            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
-            app:destination="@id/forgotPasswordFragment" />
     </fragment>
     <fragment
         android:id="@+id/createNewAccountFragment"
-        android:name="com.example.biddingapp.CreateNewAccountFragment"
+        android:name="com.example.biddingapp.fragment.CreateNewAccountFragment"
         android:label="fragment_create_new_account"
         tools:layout="@layout/fragment_create_new_account" >
         <action
@@ -34,7 +31,7 @@
     </fragment>
     <fragment
         android:id="@+id/tradingFragment"
-        android:name="com.example.biddingapp.TradingFragment"
+        android:name="com.example.biddingapp.fragment.TradingFragment"
         android:label="fragment_trading"
         tools:layout="@layout/fragment_trading" >
         <action
@@ -45,17 +42,8 @@
             app:destination="@id/userProfileFragment" />
     </fragment>
     <fragment
-        android:id="@+id/forgotPasswordFragment"
-        android:name="com.example.biddingapp.ForgotPasswordFragment"
-        android:label="fragment_forgot_password"
-        tools:layout="@layout/fragment_forgot_password" >
-        <action
-            android:id="@+id/action_forgotPasswordFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/userProfileFragment"
-        android:name="com.example.biddingapp.UserProfileFragment"
+        android:name="com.example.biddingapp.fragment.UserProfileFragment"
         android:label="fragment_user_profile"
         tools:layout="@layout/fragment_user_profile" >
         <action
