all fragments done

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -64,6 +64,9 @@
         <action
             android:id="@+id/action_userProfileFragment_to_historyFragment"
             app:destination="@id/historyFragment" />
+        <action
+            android:id="@+id/action_userProfileFragment_to_myItemsFragment"
+            app:destination="@id/myItemsFragment" />
     </fragment>
     <fragment
         android:id="@+id/historyFragment"
@@ -90,4 +93,18 @@
         android:name="com.example.biddingapp.fragment.ItemViewFragment"
         android:label="fragment_item_view"
         tools:layout="@layout/fragment_item_view" />
+    <fragment
+        android:id="@+id/myItemsFragment"
+        android:name="com.example.biddingapp.fragment.MyItemsFragment"
+        android:label="fragment_my_items"
+        tools:layout="@layout/fragment_my_items" >
+        <action
+            android:id="@+id/action_myItemsFragment_to_ownItemViewFragment"
+            app:destination="@id/ownItemViewFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/ownItemViewFragment"
+        android:name="com.example.biddingapp.fragment.OwnItemViewFragment"
+        android:label="fragment_own_item_view"
+        tools:layout="@layout/fragment_own_item_view" />
 </navigation>
