--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -149,4 +149,15 @@
         android:layout_marginTop="17dp"
         android:text="Add" />
 
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="26dp"
+
+        android:layout_marginTop="40dp"
+        android:text="My Items" />
+
 </RelativeLayout>
