--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -14,8 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/firstnameTextViewId"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="117dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="91dp"
         android:text="Email"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -26,9 +26,21 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/firstnameTextViewId"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="194dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="164dp"
         android:text="Balance"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/lastnameTextView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/firstnameTextViewId"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="239dp"
+        android:text="Hold"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -38,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="26dp"
         android:layout_marginTop="16dp"
         android:text="First Name"
         android:textSize="20sp"
@@ -50,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="18dp"
+        android:layout_marginStart="26dp"
         android:layout_marginTop="46dp"
         android:text="First Name"
         android:textColor="@color/black"
@@ -63,8 +75,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/firstnameTextViewId"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="16dp"
         android:text="Last Name"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -89,7 +101,7 @@
         android:layout_below="@+id/lastnameTextView"
         android:layout_alignParentStart="true"
         android:layout_marginStart="26dp"
-        android:layout_marginTop="93dp"
+        android:layout_marginTop="82dp"
         android:text="Email"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -101,9 +113,22 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/lastnameTextView"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="170dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="160dp"
         android:text="Balance $$"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:id="@+id/lastnameTextViewId4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/lastnameTextView"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="233dp"
+        android:text="Hold $$"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="italic" />
@@ -131,7 +156,7 @@
         android:id="@+id/editTextTextPersonName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lastnameTextViewId3"
+        android:layout_below="@+id/lastnameTextViewId4"
         android:layout_alignParentStart="true"
         android:layout_marginStart="26dp"
         android:layout_marginTop="16dp"
