--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -4,12 +4,12 @@
     <item
         android:id="@+id/bids"
         android:enabled="true"
-        android:icon="@drawable/icon_drawer"
+        android:icon="@drawable/bidding"
         android:title="Bids"/>
     <item
         android:id="@+id/history"
         android:enabled="true"
-        android:icon="@drawable/home"
+        android:icon="@drawable/history"
         android:title="History"/>
     <item
         android:id="@+id/profileIcons"
