--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -17,6 +17,7 @@
         android:layout_marginStart="26dp"
         android:layout_marginTop="91dp"
         android:text="Email"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -29,6 +30,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="164dp"
         android:text="Balance"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -41,6 +43,7 @@
         android:layout_marginStart="26dp"
         android:layout_marginTop="239dp"
         android:text="Hold"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -53,6 +56,7 @@
         android:layout_marginStart="26dp"
         android:layout_marginTop="16dp"
         android:text="First Name"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -78,6 +82,7 @@
         android:layout_marginStart="26dp"
         android:layout_marginTop="16dp"
         android:text="Last Name"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -158,31 +163,34 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/lastnameTextViewId4"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="69dp"
         android:ems="10"
         android:hint="Money $"
         android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="123dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/editTextTextPersonName"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="17dp"
+        android:layout_below="@+id/lastnameTextViewId4"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="72dp"
+        android:layout_toEndOf="@+id/editTextTextPersonName"
         android:text="Add" />
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="wrap_content"
+        android:layout_width="138dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="26dp"
+        android:layout_alignParentEnd="true"
 
-        android:layout_marginTop="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="143dp"
+        android:layout_marginEnd="130dp"
+        android:layout_marginBottom="70dp"
         android:text="My Items" />
 
 </RelativeLayout>
