--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -191,6 +191,6 @@
         android:layout_marginStart="143dp"
         android:layout_marginEnd="130dp"
         android:layout_marginBottom="70dp"
-        android:text="My Items" />
+        android:text="My Listings" />
 
 </RelativeLayout>
