--- a/app/src/main/res/layout/fragment_trading.xml
+++ b/app/src/main/res/layout/fragment_trading.xml
@@ -46,9 +46,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Items"
+        android:text="ITEMS"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:textColor="#494747"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
