--- a/app/src/main/res/layout/fragment_post_item.xml
+++ b/app/src/main/res/layout/fragment_post_item.xml
@@ -65,7 +65,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="New Item"
-        android:textSize="34sp"
+        android:textColor="#494747"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
