--- a/app/src/main/res/layout/fragment_item_view.xml
+++ b/app/src/main/res/layout/fragment_item_view.xml
@@ -5,6 +5,7 @@
     android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
     tools:context=".fragment.ItemViewFragment" >
 
     <TextView
@@ -16,6 +17,7 @@
         android:text="TextView"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
@@ -28,6 +30,7 @@
         android:text="TextView"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView23" />
 
@@ -38,6 +41,8 @@
         android:layout_marginTop="16dp"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:fontFamily="sans-serif-black"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -51,6 +56,7 @@
         android:text="TextView"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -61,6 +67,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="TextView"
+        android:fontFamily="sans-serif-black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,6 +80,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="TextView"
+        android:fontFamily="sans-serif-black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,8 +88,8 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName5"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="238dp"
+        android:layout_height="51dp"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="96dp"
         android:ems="10"
@@ -104,7 +112,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:text="Cancel Your Bid"
+        android:text="Cancel Bid"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
